--- a/product/cart.html
+++ b/product/cart.html
@@ -14,9 +14,6 @@
     <link rel="stylesheet" href="../fontawesome/css/all.min.css">
     <script src="../js/main.js"></script>
     <script src="../js/sliders.js"></script>
-    <!-- slides -->
-    <!-- <link rel="stylesheet" href="css/my-slider.css"> -->
-    <!-- <script src="js/slides.js"></script> -->
     <link rel="stylesheet" href="../css/cart.css">
     <script src="../js/cart.js"></script>
 
@@ -49,8 +46,8 @@
                         </div>
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 ">
                             <i class="fas fa-dollar-sign"></i>
-                            <a href="thanhtoan.html">Thanh toán
-                                <p>An toàn, tện lợi</p>
+                            <a href="paymentpolicy.html">Thanh toán
+                                <p>An toàn, tiện lợi</p>
                             </a>
                         </div>
                     </div>
@@ -90,12 +87,7 @@
                                         </ul>
                                         <div class="clearfix-y-destop"></div>
                                         <ul class="">
-                                            <a href="#">Xếp Hạng</a>
-                                            <li><a href="#">Sách mới</a></li>
-                                            <li><a href="#">Sách sắp phát hành</a></li>
-                                            <li><a href="#">Sách bán chạy</a></li>
-                                            <li><a href="#">Sách giảm giá</a></li>
-                                            <li><a href="#">Sách hay</a></li>
+                                            ../bootstrap/
                                         </ul>
                                     </div>
                                 </ul>
@@ -122,12 +114,12 @@
                                     Đăng nhập
                                 </button>
                             </li>
-                            <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="#">Đăng ký</a></li>
+                            <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="register.html">Đăng ký</a></li>
                         </span>
                         <span class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                             <div>
                                 <a href="cart.html">
-                                    <i class="fas fa-cart-plus"><sup id="slsanpham">0</sup></i> Giỏ hàng
+                                    <i class="fas fa-cart-plus"><sup id="slsanpham">2</sup></i> Giỏ hàng
                                 </a>
                             </div>
                         </span>
@@ -140,7 +132,7 @@
 
         <div class="container ">
             <li class="tip1 col-xs-12 col-sm-12 col-md-3 col-lg-3">
-                <a href="index.html">/ Trang chủ &nbsp;</a>
+                <a href="../index.html">/ Trang chủ &nbsp;</a>
                 <a href="cart.html">/ Giỏ hàng &nbsp;</a>
             </li>
         </div>
@@ -154,6 +146,7 @@
                 <nav class=" nav_2 col-sm-3 col-md-3 col-lg-3">
                     <ul>
                         <div>
+                            <br>
                             <b>DANH MỤC SẢN PHẨM</b>
                         </div>
                         <li><a href="#">Sách Thiếu Nhi</a></li>
@@ -169,7 +162,7 @@
                     </ul>
                 </nav>
                 <section class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
-                    <h3>Giỏ hàng</h3>
+                    <br><br>
                     <div class="row">
                         <h4>GIỎ HÀNG CỦA BẠN </h4>
                         <div class="table_giohang table-responsive">
@@ -246,25 +239,25 @@
                                     <div class="form-group">
                                         <label for="txtname">Họ và tên</label><span id="tbname"
                                             class="text-danger">(*)</span>
-                                        <input type="text" class="form-control" id="txtname" placeholder="David Joe"
+                                        <input type="text" class="form-control" id="txtname" placeholder="Họ và tên"
                                             onblur="testname()">
                                     </div>
                                     <div class="form-group">
-                                        <label for="txtname">email</label><span id="tbname"
+                                        <label for="txtname">Email</label><span id="tbname"
                                             class="text-danger">(*)</span>
-                                        <input type="email" class="form-control" id="txtemai" placeholder="">
+                                        <input type="email" class="form-control" id="txtemai" placeholder="Your email">
                                     </div>
                                     <div class="form-group">
                                         <label for="txtsdt">Số điện thoại</label><span id="tbsdt"
                                             class="text-danger">(*)</span>
-                                        <input type="text" class="form-control" id="txtsdt" placeholder=""
+                                        <input type="text" class="form-control" id="txtsdt" placeholder="09x-xxx-xxxx"
                                             onblur="testsdt()">
                                     </div>
                                     <div class="form-group">
                                         <label for="txtdiachi">Địa chỉ giao hàng</label><span id="tbdiachi"
                                             class="text-danger">(*)</span>
                                         <input type="text" class="form-control" id="txtdiachi"
-                                            placeholder="thông tin chi tiết ( số nhà , xã/phường , quận/huyện, thành phố) ">
+                                            placeholder="Thông tin chi tiết ( Số nhà , xã/phường , Quận/huyện, Thành phố) ">
                                     </div>
                                 </form>
                                 <div class="form_thanhtoan_chinhsach">
@@ -331,23 +324,23 @@
             <div class="footer_title">
                 <div class="contact col-xs-12 col-sm-12 col-md-3 col-lg-3 ">
                     <div class="contact_adress">
-                        <h3>BookStore_WEB</h3>
-                        <h4>D/C: Industrial University of Ho Chi Minh City
+                        <img src="../images/logo/logobookstore.jpg" alt="" srcset="">
+                        <h5>D/C: Industrial University of Ho Chi Minh City
 
-                        </h4>
+                        </h5>
                     </div>
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-phone-alt"></i></div>
                         <div>
                             &nbsp;HOTLINE <br>
-                            <h5>0369172647</h5>
+                            <h4>0369172647</h4>
                         </div>
                     </div>
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-envelope"></i></div>
                         <div>
                             &nbsp;EMAIL <br>
-                            <h5>congthanh30102001@gmail.com</h5>
+                            <h4>congthanh30102001@gmail.com</h4>
                         </div>
                     </div>
                     <div class="contact_from">
@@ -416,44 +409,44 @@
 
 
     <!-- Modal -->
-    <div class=" modal fade " id="myModalHorizontal " tabindex="-1 " role="dialog " aria-labelledby="myModalLabel "
-        aria-hidden="true ">
-        <div class="modal-dialog ">
-            <div class="modal-content ">
+    <div class=" modal fade" id="myModalHorizontal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
                 <!-- Modal Header -->
-                <div class="modal-header ">
-                    <button type="button " class="close " data-dismiss="modal ">
-                        <span aria-hidden="true ">&times;</span>
-                        <span class="sr-only ">Close</span>
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span aria-hidden="true">&times;</span>
+                        <span class="sr-only">Close</span>
                     </button>
-                    <h3 class="modal-title " id="myModalLabel " style="color: #e0a500; margin-left: 1rem; ">
-                        BookStore_WEB
+                    <h3 class="modal-title" id="myModalLabel" style="color: #e0a500; margin-left: 1rem;">
+                        <img src="../images/logo/logobookstore.jpg" alt="" srcset="">
                     </h3>
                 </div>
                 <!-- Modal Body -->
-                <div class="modal-body ">
-                    <form class="form-horizontal " role="form ">
-                        <div class="form-group ">
-                            <label class="col-sm-2 control-label " for="txttk ">Tài khoản</label>
-                            <div class="col-sm-10 ">
-                                <input type="text " class="form-control " id="txttk " placeholder="Tài khoản "
-                                    onblur="testtk() " />
+                <div class="modal-body">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label" for="txttk">Tài khoản</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="txttk" placeholder="Tài khoản"
+                                    onblur="testtk()" />
                             </div>
-                            <span id="tbtk " class="col-sm-10 text-danger "></span>
+                            <span id="tbtk" class="col-sm-10 text-danger"></span>
                         </div>
-                        <div class="form-group ">
-                            <label class="col-sm-2 control-label " for="txtmk ">Mật khẩu</label>
-                            <div class="col-sm-10 ">
-                                <input type="password " class="form-control " id="txtmk " placeholder="Mật khẩu "
-                                    onblur="testmk() " />
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label" for="txtmk">Mật khẩu</label>
+                            <div class="col-sm-10">
+                                <input type="password" class="form-control" id="txtmk" placeholder="Mật khẩu"
+                                    onblur="testmk()" />
                             </div>
-                            <span id="tbmk " class="col-sm-10 text-danger "></span>
+                            <span id="tbmk" class="col-sm-10 text-danger"></span>
                         </div>
-                        <div class="form-group ">
-                            <div class="col-sm-offset-2 col-sm-10 ">
-                                <div class="checkbox ">
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <div class="checkbox">
                                     <label>
-                                        <input type="checkbox " /> Nhớ mật khẩu
+                                        <input type="checkbox" /> Nhớ mật khẩu
                                     </label>
                                 </div>
                             </div>
@@ -461,10 +454,10 @@
                     </form>
                 </div>
                 <!-- Modal Footer -->
-                <div class="modal-footer ">
-                    <div class="form-group ">
-                        <div class="col-sm-offset-2 col-sm-10 ">
-                            <button type="submit " class="btn btn-primary ">Đăng nhập</button>
+                <div class="modal-footer">
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-primary">Đăng nhập</button>
                         </div>
                     </div>
                 </div>
