--- a/product/paymentpolicy.html
+++ b/product/paymentpolicy.html
@@ -5,19 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.1">
     <title>Chính sách thanh toán</title>
-    <script src="bootstrap-3.4.1-dist/jquery-3.5.1.js"></script>
-    <script src="bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
+    <script src="../bootstrap/js/jquery-3.5.1.js"></script>
+    <script src="../bootstrap/bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="../css/base.css"> -->
-    <link rel="stylesheet" href="css/base2.css">
-    <link rel="stylesheet" href="css/slider.css">
-    <link rel="stylesheet" href="css/returnpolicy.css">
-    <link rel="stylesheet" href="fontawesome-free-5.13.0-web/css/all.min.css">
-    <script src="js/main.js"></script>
-    <script src="js/slider.js"></script>
-    <!-- slides -->
-    <link rel="stylesheet" href="css/my-slider.css">
-    <script src="js/slides.js"></script>
+    <link rel="stylesheet" href="../css/base2.css">
+    <link rel="stylesheet" href="../css/my-slider.css">
+    <link rel="stylesheet" href="../css/returnpolicy.css">
+    <link rel="stylesheet" href="../fontawesome/css/all.min.css">
+    <script src="../js/main.js"></script>
+    <script src="../js/sliders.js"></script>
+
 
 
 </head>
@@ -29,8 +27,8 @@
                 <div class="row header_">
                     <div style="height: 18px;"></div>
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 header_logo">
-                        <a href="index.html">
-                            <img src="../images/logobookstore.png" alt="home">
+                        <a href="../index.html">
+                            <img src="../images/logo/logobookstore.jpg" alt="home">
                         </a>
                     </div>
                     <div class="header_policy col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
@@ -48,8 +46,8 @@
                         </div>
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 ">
                             <i class="fas fa-dollar-sign"></i>
-                            <a href="thanhtoan.html">Thanh toán
-                                <p>An toàn, tện lợi</p>
+                            <a href="paymentpolicy.html">Thanh toán
+                                <p>An toàn, tiện lợi</p>
                             </a>
                         </div>
                     </div>
@@ -88,12 +86,12 @@
                                     </ul>
                                     <div class="clearfix-y-destop"></div>
                                     <ul class="">
-                                        <a href="#">Xếp Hạng</a>
-                                        <li><a href="#">Sách mới</a></li>
-                                        <li><a href="#">Sách sắp phát hành</a></li>
-                                        <li><a href="#">Sách bán chạy</a></li>
-                                        <li><a href="#">Sách giảm giá</a></li>
-                                        <li><a href="#">Sách hay</a></li>
+                                        <a href="#">Sách tài liệu</a>
+                                        <li><a href="#">Kinh tế</a></li>
+                                        <li><a href="#">Chính trị</a></li>
+                                        <li><a href="#">Văn hoá</a></li>
+                                        <li><a href="#">Xã hội</a></li>
+                                        <li><a href="#">Công nghệ</a></li>
                                     </ul>
                                 </div>
                             </ul>
@@ -120,12 +118,12 @@
                                 Đăng nhập
                             </button>
                         </li>
-                        <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="#">Đăng ký</a></li>
+                        <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="./register.html">Đăng ký</a></li>
                     </span>
                     <span class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                         <div>
                             <a href="cart.html">
-                                <i class="fas fa-cart-plus"><sup id="slsanpham">0</sup></i> Giỏ hàng
+                                <i class="fas fa-cart-plus"><sup id="slsanpham">2</sup></i> Giỏ hàng
                             </a>
                         </div>
                     </span>
@@ -137,7 +135,7 @@
     <div class="container ">
         <li class="tip1 col-xs-12 col-sm-12 col-md-3 col-lg-3">
             <a href="../index.html">/ Trang chủ &nbsp;</a>
-            <a href="thanhtoan.html">/ Chính sách thanh toán &nbsp;</a>
+            <a href="paymentpolicy.html">/ Chính sách thanh toán &nbsp;</a>
         </li>
     </div>
     </div>
@@ -167,7 +165,7 @@
                     </ul>
                 </nav>
                 <section class=" col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <h4>Thông tin|</h4> <br>
+                    <h4>Thông tin|</h4>
                     <b>
                         <h3>Phương Thức Thanh Toán Khi Mua Hàng Tại BookStore.WEB</h3>
                     </b>
@@ -218,7 +216,7 @@
                         thoại của người đặt hàng”. Sau khi chuyển khoản thành công, Tài khoản Pibook báo nhận được
                         chuyển khoản, Pibook sẽ liên lạc lại với khách hàng để xác nhận đã nhận được chuyển khoản. Hoặc
                         khách hàng có thể liên hệ trực tiếp đến
-                        Pibook qua số điện thoại “0971191412” hoặc qua mail: hominhkhoa2000vvk@gmail.com, hoặc qua
+                        Pibook qua số điện thoại “0971191412” hoặc qua mail: congthanh30102001@gmail.com, hoặc qua
                         Facebook: http://www.facebook.com/Khoa.vn để xác nhận.</p>
 
 
@@ -271,12 +269,9 @@
                             </li>
                             <li class="nav-item">
                                 <img src="../images/product/h12.jpeg">
-                                <a class="nav-link" href="#">Tsubasa - Giấc Mơ Sân Cỏ - Tập 1</a>
+                                <a class="nav-link" href="#">Magic</a>
                             </li>
-                            <li class="nav-item">
-                                <img src="../images/product/yeu-tham-muoi-nam-chua-dam-noi.png">
-                                <a class="nav-link" href="#">Yêu Thầm Mười Năm Chưa Dám Nói</a>
-                            </li>
+
                         </ul>
 
                     </nav>
@@ -299,7 +294,7 @@
             <div class="footer_title">
                 <div class="contact col-xs-12 col-sm-12 col-md-3 col-lg-3 ">
                     <div class="contact_adress">
-                        <h4>BOOKVN</h4>
+                        <img src="../images/logo/logobookstore.jpg" alt="" srcset="">
                         <p>D/C: IUH Trường DH Công Nghiệp TP.HCM
                             <br>Gpkd:123341120
                         </p>
@@ -307,21 +302,21 @@
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-phone-alt"></i></div>
                         <div>
-                            HOTLINE <br>
+                            &nbsp; HOTLINE <br>
                             <h4>0971191412</h4>
                         </div>
                     </div>
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-envelope"></i></div>
                         <div>
-                            EMAIL <br>
-                            <h4>hominhkhoa2000vvk@gmail.com</h4>
+                            &nbsp; EMAIL <br>
+                            <h4>congthanh30102001@gmail.com</h4>
                         </div>
                     </div>
                     <div class="contact_from">
-                        <p>Đăng ký nhận newsletter</p>
+                        <p>Đăng ký nhận thông tin sách mới</p>
                         <form action="">
-                            <input type="text" id="email_customer_newsletter" placeholder="email...">
+                            <input type="text" id="email_customer_newsletter" placeholder="Your email">
                             <input class="contact_from_style" type="submit" value="Đăng ký ">
                         </form>
                     </div>
@@ -396,7 +391,7 @@
                         <span class="sr-only">Close</span>
                     </button>
                     <h3 class="modal-title" id="myModalLabel" style="color: #e0a500; margin-left: 1rem;">
-                        Book.vn
+                        <img src="../images/logo/logobookstore.jpg" alt="" srcset="">
                     </h3>
                 </div>
                 <!-- Modal Body -->
