--- a/product/register.html
+++ b/product/register.html
@@ -7,7 +7,7 @@
     <title>Đăng ký tài khoản</title>
     <script src="../bootstrap/js/jquery-3.5.1.js"></script>
     <script src="../bootstrap/bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../bootstrap/bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="../css/base.css"> -->
     <link rel="stylesheet" href="../css/base2.css">
     <link rel="stylesheet" href="../css/my-slider.css">
@@ -29,7 +29,7 @@
                     <div style="height: 18px;"></div>
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 header_logo">
                         <a href="../index.html">
-                            <img src="../images/logobookstore.png" alt="home">
+                            <img src="../images/logo/logobookstore.jpg" alt="home">
                         </a>
                     </div>
                     <div class="header_policy col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
@@ -47,8 +47,8 @@
                         </div>
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 ">
                             <i class="fas fa-dollar-sign"></i>
-                            <a href="./thanhtoan.html">Thanh toán
-                                <p>An toàn, tện lợi</p>
+                            <a href="./paymentpolicy.html">Thanh toán
+                                <p>An toàn, tiện lợi</p>
                             </a>
                         </div>
                     </div>
@@ -88,12 +88,12 @@
                                         </ul>
                                         <div class="clearfix-y-destop"></div>
                                         <ul class="">
-                                            <a href="#">Xếp Hạng</a>
-                                            <li><a href="#">Sách mới</a></li>
-                                            <li><a href="#">Sách sắp phát hành</a></li>
-                                            <li><a href="#">Sách bán chạy</a></li>
-                                            <li><a href="#">Sách giảm giá</a></li>
-                                            <li><a href="#">Sách hay</a></li>
+                                            <a href="#">Sách tài liệu</a>
+                                            <li><a href="#">Kinh tế</a></li>
+                                            <li><a href="#">Chính trị</a></li>
+                                            <li><a href="#">Văn hoá</a></li>
+                                            <li><a href="#">Xã hội</a></li>
+                                            <li><a href="#">Công nghệ</a></li>
                                         </ul>
                                     </div>
                                 </ul>
@@ -116,7 +116,7 @@
                         <span class="account_ col-xs-8 col-sm-8 col-md-8 col-lg-8">
                             <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 
-                                <a href="./dangnhap.html">Đăng nhập</a>
+                                <a href="./login.html">Đăng nhập</a>
 
                             </li>
                             <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="register.html">Đăng ký</a></li>
@@ -124,7 +124,7 @@
                         <span class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                             <div>
                                 <a href="cart.html">
-                                    <i class="fas fa-cart-plus"><sup id="slsanpham">0</sup></i> Giỏ hàng
+                                    <i class="fas fa-cart-plus"><sup id="slsanpham">2</sup></i> Giỏ hàng
                                 </a>
                             </div>
                         </span>
@@ -150,6 +150,7 @@
                 <nav class=" nav_2 col-sm-3 col-md-3 col-lg-3">
                     <ul>
                         <div>
+                            <br>
                             <b>DANH MỤC SẢN PHẨM</b>
                         </div>
                         <li><a href="#">Sách Thiếu Nhi</a></li>
@@ -166,8 +167,9 @@
                 </nav>
                 <form role="form" class=" col-xs-12 col-sm-6 col-md-4 col-lg-4 form-hozirontal">
                     <div class="form-group">
+                        <br><br><br><br>
                         <label for="txttk">Tài khoản </label><span id="tbtk" class="text-danger">(*)</span>
-                        <input type="text" id="txttk" class="form-control" placeholder="Email, Số điện thoại"
+                        <input type="text" id="txttk" class="form-control" placeholder="Email/Số điện thoại"
                             onblur="testtk()">
                     </div>
                     <div class="form-group">
@@ -181,7 +183,7 @@
                     </div>
                     <div class="form-group">
                         <label for="txtname">Họ và tên</label><span id="tbname" class="text-danger">(*)</span>
-                        <input type="text" class="form-control" id="txtname" placeholder="David Joe"
+                        <input type="text" class="form-control" id="txtname" placeholder="Họ và tên"
                             onblur="testname()">
                     </div>
                     <div class="form-group form-check">
@@ -204,7 +206,7 @@
             <div class="footer_title">
                 <div class="contact col-xs-12 col-sm-12 col-md-3 col-lg-3 ">
                     <div class="contact_adress">
-                        <h4>BOOKVN</h4>
+                        <img src="../images/logo/logobookstore.jpg" alt="" srcset="">
                         <p>D/C: IUH Trường DH Công Nghiệp TP.HCM
                             <br>Gpkd:123341120
                         </p>
@@ -212,21 +214,21 @@
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-phone-alt"></i></div>
                         <div>
-                            HOTLINE <br>
+                            &nbsp;HOTLINE <br>
                             <h4>0369172647</h4>
                         </div>
                     </div>
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-envelope"></i></div>
                         <div>
-                            EMAIL <br>
+                            &nbsp;EMAIL <br>
                             <h4>congthanh30102001@gmail.com</h4>
                         </div>
                     </div>
                     <div class="contact_from">
-                        <p>Đăng ký nhận newsletter</p>
+                        <p>Đăng ký nhận thông tin sách mới</p>
                         <form action="">
-                            <input type="text" id="email_customer_newsletter" placeholder="email...">
+                            <input type="text" id="email_customer_newsletter" placeholder="Your email">
                             <input class="contact_from_style" type="submit" value="Đăng ký ">
                         </form>
                     </div>
@@ -237,7 +239,7 @@
                         <p>
                             <a href="">Câu hỏi thường gặp</a><br>
                             <a href="">Hướng dẫn khách hàng</a><br>
-                            <a href="thanhtoan.html">Hướng dẫn thanh toán</a><br>
+                            <a href="paymentpolicy.html">Hướng dẫn thanh toán</a><br>
                             <a href="Delivery.html">phương thức vận chuyển</a>
                         </p>
                     </div>
@@ -264,9 +266,9 @@
                 </div>
                 <div class="contact_follow col-xs-12 col-sm-12 col-md-4 col-lg-4 ">
                     <h4>Kết nối với chúng tôi</h4>
-                    <a href="#"><img src="image/iconSSS/facebook.PNG" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/youtube.PNG" alt=""></a><br>
-                    <a href="#"><img src="image/iconSSS/zalo.PNG" alt=""></a>
+                    <a href="#"><img src="../images/icon/facebook.PNG" alt=""></a>
+                    <a href="#"><img src="../images/icon/youtube.PNG" alt=""></a><br>
+                    <a href="#"><img src="../images/icon/zalo.PNG" alt=""></a>
                 </div>
             </div>
             <div class="line_spacing-x"></div>
@@ -276,10 +278,10 @@
                     <p>from: BookStore.WEB</p>
                 </div>
                 <div class="col-xs-8 col-sm-8 col-md-4 col-lg-4">
-                    <a href="#"><img src="image/iconSSS/visa.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/mastercard.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/netbanking.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/cash.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/visa.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/mastercard.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/netbanking.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/cash.png" alt=""></a>
                 </div>
             </div>
         </footer>
