--- a/product/Delivery.html
+++ b/product/Delivery.html
@@ -7,7 +7,7 @@
     <title>Chính sách vận chuyển</title>
     <script src="../bootstrap/js/jquery-3.5.1.js"></script>
     <script src="../bootstrap/bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../bootstrap/bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="../css/base.css"> -->
     <link rel="stylesheet" href="../css/base2.css">
     <link rel="stylesheet" href="../css/my-slider.css">
@@ -27,8 +27,8 @@
                 <div class="row header_">
                     <div style="height: 18px;"></div>
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 header_logo">
-                        <a href="index.html">
-                            <img src="../images/logobookstore.png" alt="home">
+                        <a href="../index.html">
+                            <img src="../images/logo/logobookstore.jpg" alt="home">
                         </a>
                     </div>
                     <div class="header_policy col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
@@ -46,8 +46,8 @@
                         </div>
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 ">
                             <i class="fas fa-dollar-sign"></i>
-                            <a href="thanhtoan.html">Thanh toán
-                                <p>An toàn, tện lợi</p>
+                            <a href="paymentpolicy.html">Thanh toán
+                                <p>An toàn, tiện lợi</p>
                             </a>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                             <i class="fas fa-headset"></i>
                         </div>
                         <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ">
-                            HOTLINE <br> 0971191412
+                            &nbsp;HOTLINE <br> 0971191412
                         </div>
 
                     </div>
@@ -86,12 +86,12 @@
                                     </ul>
                                     <div class="clearfix-y-destop"></div>
                                     <ul class="">
-                                        <a href="#">Xếp Hạng</a>
-                                        <li><a href="#">Sách mới</a></li>
-                                        <li><a href="#">Sách sắp phát hành</a></li>
-                                        <li><a href="#">Sách bán chạy</a></li>
-                                        <li><a href="#">Sách giảm giá</a></li>
-                                        <li><a href="#">Sách hay</a></li>
+                                        <a href="#">Sách tài liệu</a>
+                                        <li><a href="#">Kinh tế</a></li>
+                                        <li><a href="#">Chính trị</a></li>
+                                        <li><a href="#">Văn hoá</a></li>
+                                        <li><a href="#">Xã hội</a></li>
+                                        <li><a href="#">Công nghệ</a></li>
                                     </ul>
                                 </div>
                             </ul>
@@ -118,12 +118,12 @@
                                 Đăng nhập
                             </button>
                         </li>
-                        <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="#">Đăng ký</a></li>
+                        <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="./register.html">Đăng ký</a></li>
                     </span>
                     <span class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                         <div>
                             <a href="cart.html">
-                                <i class="fas fa-cart-plus"><sup id="slsanpham">0</sup></i> Giỏ hàng
+                                <i class="fas fa-cart-plus"><sup id="slsanpham">2</sup></i> Giỏ hàng
                             </a>
                         </div>
                     </span>
@@ -165,7 +165,7 @@
                     </ul>
                 </nav>
                 <section class=" col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <h4>Thông tin |</h4> <br>
+                    <h4>Thông tin |</h4>
                     <b>
                         <h3>Mua hàng tại BookStore.WEB Vận Chuyển Miễn Phí</h3>
                     </b>
@@ -305,23 +305,23 @@
                     <!-- Links -->
                     <ul class="navbar-nav">
                         <li class="nav_item">
-                            <img src="image/product/h15.jpeg">
+                            <img src="../images/product/h15.jpeg">
                             <br>
                             <a class="nav-link" href="#">Để Tớ Khóc - Tập 1</a>
                         </li>
 
                         <li class="nav-item">
-                            <img src="image/product/h11.jpeg">
+                            <img src="../images/product/h11.jpeg">
                             <br>
                             <a class="nav-link" href="#">Những Nỗi Sợ Sâu Thẳm</a>
                         </li>
                         <li class="nav-item">
-                            <img src="image/product/h12.jpeg">
+                            <img src="../images/product/h12.jpeg">
                             <br>
-                            <a class="nav-link" href="#">Tsubasa - Giấc Mơ Sân Cỏ - Tập 1</a>
+                            <a class="nav-link" href="#">Magic - Phép thuật nhiệm màu</a>
                         </li>
                         <li class="nav-item">
-                            <img src="image/sanpham/yeu-tham-muoi-nam-chua-dam-noi.png">
+                            <img src="../images/product/yeu-tham-muoi-nam-chua-dam-noi.png">
                             <br>
                             <a class="nav-link" href="#">Yêu Thầm Mười Năm Chưa Dám Nói</a>
                         </li>
@@ -341,29 +341,29 @@
             <div class="footer_title">
                 <div class="contact col-xs-12 col-sm-12 col-md-3 col-lg-3 ">
                     <div class="contact_adress">
-                        <h4>BOOKVN</h4>
-                        <p>D/C: trường dh công nghiệp TP.HCM
+                        <img src="../images/logo/logobookstore.jpg" alt="" srcset="">
+                        <p>D/C: Trường ĐẠI HỌC CÔNG NGHIỆP TP.HCM
                             <br>Gpkd:123341120
                         </p>
                     </div>
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-phone-alt"></i></div>
                         <div>
-                            HOTLINE <br>
+                            &nbsp;HOTLINE <br>
                             <h4>0369172647</h4>
                         </div>
                     </div>
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-envelope"></i></div>
                         <div>
-                            EMAIL <br>
+                            &nbsp;EMAIL <br>
                             <h4>congthanh30102001@gmail.com</h4>
                         </div>
                     </div>
                     <div class="contact_from">
-                        <p>Đăng ký nhận newsletter</p>
+                        <p>Đăng ký nhận thông tin sách mới</p>
                         <form action="">
-                            <input type="text" id="email_customer_newsletter" placeholder="email...">
+                            <input type="text" id="email_customer_newsletter" placeholder="Your email">
                             <input class="contact_from_style" type="submit" value="Đăng ký ">
                         </form>
                     </div>
@@ -401,9 +401,9 @@
                 </div>
                 <div class="contact_follow col-xs-12 col-sm-12 col-md-4 col-lg-4 ">
                     <h4>Kết nối với chúng tôi</h4>
-                    <a href="#"><img src="image/iconSSS/facebook.PNG" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/youtube.PNG" alt=""></a><br>
-                    <a href="#"><img src="image/iconSSS/zalo.PNG" alt=""></a>
+                    <a href="#"><img src="../images/icon/facebook.PNG" alt=""></a>
+                    <a href="#"><img src="../images/icon/youtube.PNG" alt=""></a><br>
+                    <a href="#"><img src="../images/icon/zalo.PNG" alt=""></a>
                 </div>
             </div>
             <div class="line_spacing-x"></div>
@@ -413,10 +413,10 @@
                     <p>from: BookStore.WEB</p>
                 </div>
                 <div class="col-xs-8 col-sm-8 col-md-4 col-lg-4">
-                    <a href="#"><img src="image/iconSSS/visa.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/mastercard.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/netbanking.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/cash.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/visa.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/mastercard.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/netbanking.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/cash.png" alt=""></a>
                 </div>
             </div>
         </footer>
@@ -438,7 +438,7 @@
                         <span class="sr-only">Close</span>
                     </button>
                     <h3 class="modal-title" id="myModalLabel" style="color: #e0a500; margin-left: 1rem;">
-                        Book.vn
+                        <img src="../images/logo/logobookstore.jpg" alt="" srcset="">
                     </h3>
                 </div>
                 <!-- Modal Body -->
