--- a/product/product5.html
+++ b/product/product5.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../fontawesome/css/all.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
     <!--My css-->
-    <link rel="stylesheet" href="../mycss/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!--BT 4 JS-->
     <script src="../bootstrap/js/jquery-3.5.1.slim.min.js"></script>
     <script src="../bootstrap/js/popper.min.js"></script>
@@ -30,8 +30,8 @@
                 </div>
                 <div class="col-md-6" style="background-color: #292929; color:#afafaf">
                     <div class="login-top">
-                        <a class="login-top" href="#"><i class="fas fa-key"></i> Sign up</a>
-                        <a class="login-top" href="#"><i class="fas fa-unlock-alt "></i> Login</a>
+                        <a class="login-top" href="./register.html"><i class="fas fa-key"></i> Sign up</a>
+                        <a class="login-top" href="./login.html"><i class="fas fa-unlock-alt "></i> Login</a>
                     </div>
                 </div>
             </div>
