--- a/product/returnpolicy.html
+++ b/product/returnpolicy.html
@@ -7,7 +7,7 @@
     <title>Chính sách đổi trả</title>
     <script src="../bootstrap/js/jquery-3.5.1.js"></script>
     <script src="../bootstrap/bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../bootstrap/bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap/bootstrap-3.4.1-dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="../css/base.css"> -->
     <link rel="stylesheet" href="../css/base2.css">
     <link rel="stylesheet" href="../css/my-slider.css">
@@ -45,8 +45,8 @@
                         </div>
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 ">
                             <i class="fas fa-dollar-sign"></i>
-                            <a href="thanhtoan.html">Thanh toán
-                                <p>An toàn, tện lợi</p>
+                            <a href="paymentpolicy.html">Thanh toán
+                                <p>An toàn, tiện lợi</p>
                             </a>
                         </div>
                     </div>
@@ -85,12 +85,12 @@
                                     </ul>
                                     <div class="clearfix-y-destop"></div>
                                     <ul class="">
-                                        <a href="#">Xếp Hạng</a>
-                                        <li><a href="#">Sách mới</a></li>
-                                        <li><a href="#">Sách sắp phát hành</a></li>
-                                        <li><a href="#">Sách bán chạy</a></li>
-                                        <li><a href="#">Sách giảm giá</a></li>
-                                        <li><a href="#">Sách hay</a></li>
+                                        <a href="#">Sách tài liệu</a>
+                                        <li><a href="#">Kinh tế</a></li>
+                                        <li><a href="#">Chính trị</a></li>
+                                        <li><a href="#">Văn hoá</a></li>
+                                        <li><a href="#">Xã hội</a></li>
+                                        <li><a href="#">Công nghệ</a></li>
                                     </ul>
                                 </div>
                             </ul>
@@ -117,12 +117,12 @@
                                 Đăng nhập
                             </button>
                         </li>
-                        <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="#">Đăng ký</a></li>
+                        <li class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><a href="./register.html">Đăng ký</a></li>
                     </span>
                     <span class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                         <div>
                             <a href="cart.html">
-                                <i class="fas fa-cart-plus"><sup id="slsanpham">0</sup></i> Giỏ hàng
+                                <i class="fas fa-cart-plus"><sup id="slsanpham">2</sup></i> Giỏ hàng
                             </a>
                         </div>
                     </span>
@@ -164,7 +164,7 @@
                     </ul>
                 </nav>
                 <section class=" col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <h4>Chính sách đổi trả hàng |</h4> <br>
+                    <h4>Chính sách đổi trả hàng |</h4>
                     <b>
                         <h3>Chính Sách Đổi Trả Hàng</h3>
                     </b>
@@ -185,7 +185,7 @@
                         phía dưới. Ngoài ra, để thực hiện đổi trả, khách hàng phải còn giữ hóa đơn mua hàng tại
                         BookStore.WEB Nếu bạn muốn tiến hàng đổi trả hàng, vui lòng liên hệ bộ phận chăm sóc khách hàng
                         của
-                        chúng tôi qua số điện thoại : 04 6329 6389
+                        chúng tôi qua số điện thoại : 097 1191412
                         hoặc Email : BookStore_WEB.com/p>
                         <b>1. Quy định về đổi/trả sản phẩm</b>
 
@@ -262,26 +262,22 @@
                         <!-- Links -->
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <img src="image/product/h3.jpeg">
+                                <img src="../images/product/h3.jpeg">
                                 <a class="nav-link" href="#">Combo Tuổi Trẻ Đáng Giá Bao Nhiêu + Mình Nói Gì Khi Nói Về
                                     Hạnh Phúc + Ta Ba Lô Trên Đất Á</a>
                             </li>
                             <li class="nav-item">
-                                <img src="image/product/h15.jpeg">
+                                <img src="../images/product/h15.jpeg">
                                 <a class="nav-link" href="#">Để Tớ Khóc - Tập 1</a>
                             </li>
 
                             <li class="nav-item">
-                                <img src="image/product/h11.jpeg">
+                                <img src="../images/product/h11.jpeg">
                                 <a class="nav-link" href="#">Những Nỗi Sợ Sâu Thẳm</a>
                             </li>
                             <li class="nav-item">
-                                <img src="image/product/h12.jpeg">
-                                <a class="nav-link" href="#">Tsubasa - Giấc Mơ Sân Cỏ - Tập 1</a>
-                            </li>
-                            <li class="nav-item">
-                                <img src="image/sanpham/yeu-tham-muoi-nam-chua-dam-noi.png">
-                                <a class="nav-link" href="#">Yêu Thầm Mười Năm Chưa Dám Nói</a>
+                                <img src="../images/product/h12.jpeg">
+                                <a class="nav-link" href="#">Magic</a>
                             </li>
                         </ul>
 
@@ -305,7 +301,7 @@
             <div class="footer_title">
                 <div class="contact col-xs-12 col-sm-12 col-md-3 col-lg-3 ">
                     <div class="contact_adress">
-                        <h4>BOOKVN</h4>
+                        <img src="../images/logo/logobookstore.jpg" alt="" srcset="">
                         <p>D/C: IUH Trường DH Công Nghiệp TP.HCM
                             <br>Gpkd:123341120
                         </p>
@@ -313,21 +309,21 @@
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-phone-alt"></i></div>
                         <div>
-                            HOTLINE <br>
+                            &nbsp;HOTLINE <br>
                             <h4>0369172647</h4>
                         </div>
                     </div>
                     <div class="contact_conact">
                         <div class="contact_conact_icon"><i class="fas fa-envelope"></i></div>
                         <div>
-                            EMAIL <br>
+                            &nbsp;EMAIL <br>
                             <h4>congthanh30102001@gmail.com
                         </div>
                     </div>
                     <div class="contact_from">
-                        <p>Đăng ký nhận newsletter</p>
+                        <p>Đăng ký nhận thông tin sách mới</p>
                         <form action="">
-                            <input type="text" id="email_customer_newsletter" placeholder="email...">
+                            <input type="text" id="email_customer_newsletter" placeholder="Your email">
                             <input class="contact_from_style" type="submit" value="Đăng ký ">
                         </form>
                     </div>
@@ -365,9 +361,9 @@
                 </div>
                 <div class="contact_follow col-xs-12 col-sm-12 col-md-4 col-lg-4 ">
                     <h4>Kết nối với chúng tôi</h4>
-                    <a href="#"><img src="image/iconSSS/facebook.PNG" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/youtube.PNG" alt=""></a><br>
-                    <a href="#"><img src="image/iconSSS/zalo.PNG" alt=""></a>
+                    <a href="#"><img src="../images/icon/facebook.PNG" alt=""></a>
+                    <a href="#"><img src="../images/icon/youtube.PNG" alt=""></a><br>
+                    <a href="#"><img src="../images/icon/zalo.PNG" alt=""></a>
                 </div>
             </div>
             <div class="line_spacing-x"></div>
@@ -377,10 +373,10 @@
                     <p>from: BookStore.WEB</p>
                 </div>
                 <div class="col-xs-8 col-sm-8 col-md-4 col-lg-4">
-                    <a href="#"><img src="image/iconSSS/visa.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/mastercard.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/netbanking.png" alt=""></a>
-                    <a href="#"><img src="image/iconSSS/cash.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/visa.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/mastercard.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/netbanking.png" alt=""></a>
+                    <a href="#"><img src="../images/icon/cash.png" alt=""></a>
                 </div>
             </div>
         </footer>
@@ -402,7 +398,7 @@
                         <span class="sr-only">Close</span>
                     </button>
                     <h3 class="modal-title" id="myModalLabel" style="color: #e0a500; margin-left: 1rem;">
-                        Book.vn
+                        <img src="../images/logo/logobookstore.jpg" alt="" srcset="">
                     </h3>
                 </div>
                 <!-- Modal Body -->
