--- a/product/product1.html
+++ b/product/product1.html
@@ -126,7 +126,7 @@
                 <h1>Phải lòng với cô đơn</h1>
                 <p>Công ty phát hành : <b style="color:#ffc82e">Skybooks</b></p>
                 <p>Nhà xuất bản : <b style="color:#ffc82e">Nhà Xuất Bản Phụ Nữ</b></p>
-                <img src="../images/product/ship.jpg" / width="10%" style="float:left">
+                <img src="../images/product/ship.jpg" width="10%" style="float:left">
                 <p style="color:#189eff">Miên phí gao hang khi mua 2 cuốn trở lên</p><br />
                 <h2 style="color:red">86.000 <sup>đ</sup></h2>
                 <h2>Số lượng:</h2><input type="number" style="height:50px;font-size:30px;width:15%;" /><br />
